<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activity_add_signature"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ch.epfl.sweng.wifi_watcher.AddSignature">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ask_for_room"
        tools:text="@string/ask_for_room"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/room_name"
        android:hint="@string/room_name_hint"
        android:layout_below="@+id/ask_for_room"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_refresh"
        android:text="@string/button_refresh"
        style="@android:style/Widget.DeviceDefault.Light.Button"
        android:layout_below="@+id/room_name"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="onButtonRefreshWifiClick"/>

    <TextView
        android:text="@string/ask_for_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_filter"
        android:layout_alignBaseline="@+id/button_refresh"
        android:layout_alignBottom="@+id/button_refresh"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_filter"
        android:entries="@array/filter_default"
        android:layout_below="@+id/button_refresh"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:text="@string/button_add_room"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_add_room"
        android:layout_below="@+id/spinner_filter"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onButtonAddSignature"/>

</RelativeLayout>
